Fix cramped h4 titles inside boxes

--- a/style.css
+++ b/style.css
@@ -43,13 +43,13 @@ nav a:active {
 }
 
 .color {
-    width: 140px;
+    width: 160px;
     height: 50px;
     display: inline-block;
     border: 2px solid #000;
     padding: 10px;
     padding-bottom: 25px;
-    margin: 5px;
+    margin: 5px 15px;
     color: white;
     line-height: 0.1em;
 }
